--- a/out-in-tech-website/src/App.css
+++ b/out-in-tech-website/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+* {
+  font-family: 'Nunito', sans-serif;
+  /* font-weight: 500; */
+  font-style: normal;
+  font-size: 1.1em;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -31,3 +37,120 @@
     transform: rotate(360deg);
   }
 }
+
+.boardImage {
+  width: 10vw;
+  height: 100%;
+}
+
+/* Home */
+.homeHeader {
+  background-color: grey;
+  font-size: 2em;
+  color: white;
+  padding: 3% 5% 3% 5%;
+  display: flex;
+  justify-content: flex-start;
+}
+.homeInfo{
+  /* background-color: grey; */
+  font-size: 1.5em;
+  /* color: white; */
+  padding: 3% 5% 3% 5%;
+  display: flex;
+  justify-content: flex-start;
+}
+.computerGif {
+  width: 40%;
+  height: 100%;
+}
+/* Team */
+.TeamWrapper {
+
+}
+.teamCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+
+
+
+/* 
+.rainbow {
+  /* display:flex;
+  flex-direction: column; */
+}
+.redLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 3px;
+  height: 100vh;
+  background-color: red;
+  position: absolute;
+  z-index: 100;
+  margin: 0px 5px;
+}
+.orangeLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 6px;
+  height: 100vh;
+  background-color: orange;
+  position: absolute;
+  z-index: 100;
+  margin: 0px 15px;
+}
+.yellowLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 3px;
+  height: 100vh;
+  background-color: yellow;
+  position: absolute;
+  z-index: 100;
+  margin: 0px 25px;
+}
+.greenLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 5px;
+  height: 100vh;
+  background-color: green;
+  position: absolute;
+  z-index: 100;
+  margin: 0px 35px;
+}
+.blueLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 3px;
+  height: 100vh;
+  background-color: blue;
+  position: absolute;
+  z-index: 100;
+  margin: 0px 45px;
+}
+.indigoLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 7px;
+  height: 100vh;
+  background-color: indigo;
+  position: absolute;
+  z-index: 100;
+  margin: 0px 55px;
+}
+.violetLine {
+  /* display:flex;
+  flex-direction: column; */
+  width: 3px;
+  height: 100vh;
+  background-color: violet;
+  position: absolute;
+  z-index: 100;
+  /* padding-left: 3%; */
+  margin: 0px 65px;
+} */
