--- a/out-in-tech-website/src/App.css
+++ b/out-in-tech-website/src/App.css
@@ -39,16 +39,18 @@
 }
 
 .boardImage {
-  width: 10vw;
+  width: 100%;
   height: 100%;
 }
 
 /* Home */
 .homeHeader {
-  background-color: grey;
-  font-size: 2em;
+  background-color: black;
+  font-size: 8em;
+  font-weight: bold;
   color: white;
-  padding: 3% 5% 3% 5%;
+  padding: 1%;
+  padding-bottom: -30px;
   display: flex;
   justify-content: flex-start;
 }
@@ -73,84 +75,3 @@
   flex-direction: row;
   justify-content: center;
 }
-
-
-
-
-
-/* 
-.rainbow {
-  /* display:flex;
-  flex-direction: column; */
-}
-.redLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 3px;
-  height: 100vh;
-  background-color: red;
-  position: absolute;
-  z-index: 100;
-  margin: 0px 5px;
-}
-.orangeLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 6px;
-  height: 100vh;
-  background-color: orange;
-  position: absolute;
-  z-index: 100;
-  margin: 0px 15px;
-}
-.yellowLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 3px;
-  height: 100vh;
-  background-color: yellow;
-  position: absolute;
-  z-index: 100;
-  margin: 0px 25px;
-}
-.greenLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 5px;
-  height: 100vh;
-  background-color: green;
-  position: absolute;
-  z-index: 100;
-  margin: 0px 35px;
-}
-.blueLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 3px;
-  height: 100vh;
-  background-color: blue;
-  position: absolute;
-  z-index: 100;
-  margin: 0px 45px;
-}
-.indigoLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 7px;
-  height: 100vh;
-  background-color: indigo;
-  position: absolute;
-  z-index: 100;
-  margin: 0px 55px;
-}
-.violetLine {
-  /* display:flex;
-  flex-direction: column; */
-  width: 3px;
-  height: 100vh;
-  background-color: violet;
-  position: absolute;
-  z-index: 100;
-  /* padding-left: 3%; */
-  margin: 0px 65px;
-} */
